; ModuleID = '/home/carl/AnghaBench/linux/arch/mips/ar7/extr_irq.c_ar7_ack_sec_irq.c'
source_filename = "/home/carl/AnghaBench/linux/arch/mips/ar7/extr_irq.c_ar7_ack_sec_irq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_data = type { i32 }

@ar7_irq_base = common dso_local global i32 0, align 4
@SEC_CR_OFFSET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.irq_data*)* @ar7_ack_sec_irq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ar7_ack_sec_irq(%struct.irq_data* %0) #0 {
  %2 = alloca %struct.irq_data*, align 8
  store %struct.irq_data* %0, %struct.irq_data** %2, align 8
  %3 = load %struct.irq_data*, %struct.irq_data** %2, align 8
  %4 = getelementptr inbounds %struct.irq_data, %struct.irq_data* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = load i32, i32* @ar7_irq_base, align 4
  %7 = sub nsw i32 %5, %6
  %8 = sub nsw i32 %7, 40
  %9 = shl i32 1, %8
  %10 = load i32, i32* @SEC_CR_OFFSET, align 4
  %11 = call i32 @REG(i32 %10)
  %12 = call i32 @writel(i32 %9, i32 %11)
  ret void
}

declare dso_local i32 @writel(i32, i32) #1

declare dso_local i32 @REG(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
